tests/snapshots/errors/duplicate_struct.mc
struct Point { x: int }
struct Point { y: int }
